{
    "name": "KeyboardControll",
    "maps": [
        {
            "name": "CM",
            "id": "cfcb564c-ad20-4ea1-8c75-2e043b766e6c",
            "actions": [
                {
                    "name": "KeyBend",
                    "type": "Value",
                    "id": "fdfc7b6e-38e9-4f0e-8d5a-cdfb3c75c4d1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyDrill",
                    "type": "Button",
                    "id": "2d2f2a32-d1e2-4d5a-bcb5-8a98788a0cb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "de3a5445-724e-4a1a-ac3c-4672a8840ae8",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyDrill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7a6469ff-301f-4abf-9265-bf5282d23d03",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyBend",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d4257513-529a-4f21-9bb6-821aa21cdaa9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyBend",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "04c7c580-5fa3-486b-ba87-c0538eda521b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyBend",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5398a581-a564-49d7-a723-24fd69913256",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyBend",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "16f5651c-75e9-490b-84fc-2c60487c2559",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyBend",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}